// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionStringsView matches snapshot when connection string count exceeds max 1`] = `
<div
  className="view"
>
  <div
    className="view-command"
  >
    <StyledCommandBarBase
      items={
        Array [
          Object {
            "ariaLabel": "connectionStrings.addConnectionCommand.ariaLabel",
            "disabled": true,
            "iconProps": Object {
              "iconName": "Add",
            },
            "key": "add",
            "onClick": [Function],
            "text": "connectionStrings.addConnectionCommand.label",
          },
        ]
      }
    />
  </div>
  <div
    className="view-scroll-vertical"
  >
    <div
      className="connection-strings"
    >
      <Component
        connectionStringWithExpiry={
          Object {
            "connectionString": "connectionString10",
            "expiration": "Thu, 01 Jan 1970 00:00:00 GMT",
          }
        }
        key="connectionString10"
        onDeleteConnectionString={[Function]}
        onEditConnectionString={[Function]}
        onSelectConnectionString={[Function]}
      />
      <Component
        connectionStringWithExpiry={
          Object {
            "connectionString": "connectionString9",
            "expiration": "Thu, 01 Jan 1970 00:00:00 GMT",
          }
        }
        key="connectionString9"
        onDeleteConnectionString={[Function]}
        onEditConnectionString={[Function]}
        onSelectConnectionString={[Function]}
      />
      <Component
        connectionStringWithExpiry={
          Object {
            "connectionString": "connectionString8",
            "expiration": "Thu, 01 Jan 1970 00:00:00 GMT",
          }
        }
        key="connectionString8"
        onDeleteConnectionString={[Function]}
        onEditConnectionString={[Function]}
        onSelectConnectionString={[Function]}
      />
      <Component
        connectionStringWithExpiry={
          Object {
            "connectionString": "connectionString7",
            "expiration": "Thu, 01 Jan 1970 00:00:00 GMT",
          }
        }
        key="connectionString7"
        onDeleteConnectionString={[Function]}
        onEditConnectionString={[Function]}
        onSelectConnectionString={[Function]}
      />
      <Component
        connectionStringWithExpiry={
          Object {
            "connectionString": "connectionString6",
            "expiration": "Thu, 01 Jan 1970 00:00:00 GMT",
          }
        }
        key="connectionString6"
        onDeleteConnectionString={[Function]}
        onEditConnectionString={[Function]}
        onSelectConnectionString={[Function]}
      />
      <Component
        connectionStringWithExpiry={
          Object {
            "connectionString": "connectionString5",
            "expiration": "Thu, 01 Jan 1970 00:00:00 GMT",
          }
        }
        key="connectionString5"
        onDeleteConnectionString={[Function]}
        onEditConnectionString={[Function]}
        onSelectConnectionString={[Function]}
      />
      <Component
        connectionStringWithExpiry={
          Object {
            "connectionString": "connectionString4",
            "expiration": "Thu, 01 Jan 1970 00:00:00 GMT",
          }
        }
        key="connectionString4"
        onDeleteConnectionString={[Function]}
        onEditConnectionString={[Function]}
        onSelectConnectionString={[Function]}
      />
      <Component
        connectionStringWithExpiry={
          Object {
            "connectionString": "connectionString3",
            "expiration": "Thu, 01 Jan 1970 00:00:00 GMT",
          }
        }
        key="connectionString3"
        onDeleteConnectionString={[Function]}
        onEditConnectionString={[Function]}
        onSelectConnectionString={[Function]}
      />
      <Component
        connectionStringWithExpiry={
          Object {
            "connectionString": "connectionString2",
            "expiration": "Thu, 01 Jan 1970 00:00:00 GMT",
          }
        }
        key="connectionString2"
        onDeleteConnectionString={[Function]}
        onEditConnectionString={[Function]}
        onSelectConnectionString={[Function]}
      />
      <Component
        connectionStringWithExpiry={
          Object {
            "connectionString": "connectionString1",
            "expiration": "Thu, 01 Jan 1970 00:00:00 GMT",
          }
        }
        key="connectionString1"
        onDeleteConnectionString={[Function]}
        onEditConnectionString={[Function]}
        onSelectConnectionString={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`ConnectionStringsView matches snapshot when connection strings present 1`] = `
<div
  className="view"
>
  <div
    className="view-command"
  >
    <StyledCommandBarBase
      items={
        Array [
          Object {
            "ariaLabel": "connectionStrings.addConnectionCommand.ariaLabel",
            "disabled": false,
            "iconProps": Object {
              "iconName": "Add",
            },
            "key": "add",
            "onClick": [Function],
            "text": "connectionStrings.addConnectionCommand.label",
          },
        ]
      }
    />
  </div>
  <div
    className="view-scroll-vertical"
  >
    <div
      className="connection-strings"
    >
      <Component
        connectionStringWithExpiry={
          Object {
            "connectionString": "connectionString1",
            "expiration": "Thu, 01 Jan 1970 00:00:00 GMT",
          }
        }
        key="connectionString1"
        onDeleteConnectionString={[Function]}
        onEditConnectionString={[Function]}
        onSelectConnectionString={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`ConnectionStringsView matches snapshot when no connection strings 1`] = `
<div
  className="view"
>
  <div
    className="view-command"
  >
    <StyledCommandBarBase
      items={
        Array [
          Object {
            "ariaLabel": "connectionStrings.addConnectionCommand.ariaLabel",
            "disabled": false,
            "iconProps": Object {
              "iconName": "Add",
            },
            "key": "add",
            "onClick": [Function],
            "text": "connectionStrings.addConnectionCommand.label",
          },
        ]
      }
    />
  </div>
  <div
    className="view-scroll-vertical"
  >
    <div
      className="connection-strings"
    />
    <Component />
  </div>
</div>
`;
